<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_server_url">https://parseapi.back4app.com/</string>
    <string name="parse_app_id">DEQeGtGjPVv8hwK187jirBYCHCd1zYSrD4cjdnfA</string>
    <string name="parse_client_key">JkSGImvdGMMHaipVSXTMgLk2OdKmlTr8Wxl0DsWm</string>

    <string name="app_name">Instagram</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_share">Share</string>
    <string name="hint_username">Type your username</string>
    <string name="hint_email">Type your e-mail</string>
    <string name="hint_password">Type your password</string>
    <string name="bt_register">Register</string>
    <string name="bt_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users_feed">UsersFeedActivity</string>
</resources>
