<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/gradient"
    android:gravity="center_vertical|center_horizontal">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:background="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <EditText android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_username"
            android:background="@drawable/custom_edit_text"/>

        <EditText android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@id/edit_username"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_password"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:text="@string/bt_login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:onClick="openRegisterUser"
            android:text="Don't have an account? Sign up"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>