<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".activity.RegisterUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/logo_register"
            android:layout_width="150dp"
            android:layout_height="113dp"
            android:background="@drawable/user"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/edit_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_register"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/hint_username"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_username_register"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/edit_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_email"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:hint="Type your password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password_register"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:text="@string/bt_register"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:onClick="openLoginUser"
            android:text="Already have an account? Sign in!"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>